# spec/swagger.yml
@@ -24,12 +24,16 @@ paths:
       responses:
         200:
           description: 'Return user entity'
+          headers:
+            JWTToken:
+              type: string
+              description: 'JWT token'
           schema:
             type: object
             properties:
               data:
                 $ref: '#/definitions/User'
-        400:
+        422:
           description: 'Validation error'
           schema:
             $ref: '#/definitions/ValidationError'
@@ -56,12 +60,16 @@ paths:
             properties:
               data:
                 $ref: '#/definitions/User'
-        400:
+        422:
           description: 'Validation error'
           schema:
             $ref: '#/definitions/ValidationError'
         401:
           description: 'Email not confirmed'
+          schema:
+            $ref: '#/definitions/AppError'
+        404:
+          description: 'User not found'
           schema:
             $ref: '#/definitions/AppError'
 
@@ -108,7 +116,7 @@ paths:
               data:
                 type: string
                 example: null
-        400:
+        422:
           description: 'Validation error'
           schema:
             $ref: '#/definitions/ValidationError'
@@ -145,7 +153,7 @@ paths:
           description: 'Token not found'
           schema:
             $ref: '#/definitions/AppError'
-        400:
+        422:
           description: 'Validation error'
           schema:
             $ref: '#/definitions/ValidationError'
@@ -164,35 +172,34 @@ paths:
             properties:
               data:
                 $ref: '#/definitions/LotList'
-    post:
+              meta:
+                $ref: '#/definitions/PaginationMeta'
+  /marketplace/lots/{id}:
+    get:
       security:
         - JWTToken: []
-      summary: 'Create lot'
-      operationId: createLot
+      summary: 'Return lot'
+      operationId: showLot
       parameters:
-        - in: body
-          name: body
+        - in: path
+          name: id
           required: true
           schema:
-            $ref: '#/definitions/Lot'
+            type: integer
       responses:
         200:
-          description: 'Successfully created lot'
+          description: 'Lot'
           schema:
             type: object
             properties:
               data:
                 $ref: '#/definitions/Lot'
-        400:
-          description: 'Validation error'
-          schema:
-            $ref: '#/definitions/ValidationError'
-        422:
-          description: 'End time must be more start time'
+        404:
+          description: 'Model not found'
           schema:
             $ref: '#/definitions/AppError'
 
-  /marketplace/lots/my:
+  /profile/lots/self:
     get:
       security:
         - JWTToken: []
@@ -223,31 +230,33 @@ paths:
             properties:
               data:
                 $ref: '#/definitions/LotList'
-
-  /marketplace/lots/{id}:
-    get:
+              meta:
+                $ref: '#/definitions/PaginationMeta'
+  /profile/lots:
+    post:
       security:
         - JWTToken: []
-      summary: 'Return lot'
-      operationId: showLot
+      summary: 'Create lot'
+      operationId: createLot
       parameters:
-        - in: path
-          name: id
+        - in: body
+          name: body
           required: true
           schema:
-            type: integer
+            $ref: '#/definitions/Lot'
       responses:
         200:
-          description: 'Lot'
+          description: 'Successfully created lot'
           schema:
             type: object
             properties:
               data:
                 $ref: '#/definitions/Lot'
-        404:
-          description: 'Model not found'
+        422:
+          description: 'Validation error'
           schema:
-            $ref: '#/definitions/AppError'
+            $ref: '#/definitions/ValidationError'
+  /profile/lots/{id}:
     delete:
       security:
         - JWTToken: []
@@ -260,7 +269,7 @@ paths:
           schema:
             type: integer
       responses:
-        200:
+        204:
           description: 'Null response'
         403:
           description: 'Delete only in PENDING status'
@@ -272,7 +281,7 @@ paths:
             $ref: '#/definitions/AppError'
     put:
       security:
-        - PersonalToken: []
+        - JWTToken: []
       summary: 'Update lot only PENDING status'
       operationId: updateLot
       parameters:
@@ -302,10 +311,29 @@ paths:
           description: 'Lot not found'
           schema:
             $ref: '#/definitions/AppError'
-        400:
+        422:
           description: 'Validation error'
           schema:
             $ref: '#/definitions/ValidationError'
+  /profile/bids/{lotId}:
+    post:
+      security:
+        - JWTToken: []
+      summary: createLotBid
+      operationId:
+      parameters:
+        - in: path
+          name: lotId
+          required: true
+          schema:
+            type: integer
+        - in: body
+          name: body
+          required: true
+          schema:
+            $ref: '#/definitions/BidCreation'
+      responses:
+
 
 securityDefinitions:
   JWTToken:
@@ -315,6 +343,26 @@ securityDefinitions:
     description: 'Example: Authorization Bearer bf24725aa32d1febc3477b61dc32220aBHbny43RsEjVTTR35t2bcOkrJtACkjI4HkATEOHNDMgdQfwouIi0OTDlXV6myY8K'
 
 definitions:
+
+  BidCreation:
+    type: object
+    properties:
+      proposed_price:
+        type: number
+        example: 12
+        description: 'number, float'
+
+  PaginationMeta:
+    type: object
+    properties:
+      total:
+        type: string
+      lastPage:
+        type: number
+      perPage:
+        type: number
+      page:
+        type: number
 
   LotList:
     type: array
